# animalclef-2025

./: .gitignore  README.md  pyproject.toml
animalclef/: cli.py  dataset.py  metrics.py  params.py  serde.py  spark.py
animalclef/data/: __init__.py  datamodule.py
animalclef/embed/: transform.py  workflow.py
animalclef/embedding/: transform.py  workflow.py
animalclef/evaluate/: classifier.py  embed.py  knn.py  model.py  triplet.py  workflow.py
animalclef/models/: __init__.py
animalclef/preprocess/: workflow.py
animalclef/train/: baseline.py
docs/: overview.md
notebooks/eda/: 00-initial-exploration.ipynb  20250302-acm-data.ipynb  20250311-acm-embeddings.ipynb  20250508-acm-triplet-embedings.ipynb
notebooks/modeling/: 20250312-00-acm-data-split.ipynb  20250312-00-acm-knn.ipynb  20250312-01-acm-knn.ipynb  20250509-00-acm-knn-triplet.ipynb  20250510-00-acm-knn-triplet.ipynb  20250511-00-acm-knn-dino.ipynb  20250511-01-acm-knn-dino-k10.ipynb  20250512-00-summary.ipynb  20250512-01-acn-reid.ipynb  20250512-02-summary.ipynb  20250512-03-summary.ipynb  20250512-04-acm-knn-dino-k10.ipynb  20250518-00-summary-md.ipynb
sbatch/: embed-dinov2.sbatch  preprocess-parquet.sbatch
scripts/: salloc.py
scripts/utils/: slurm-venv.sh
tests/: conftest.py
tests/embed/: test_transform.py  test_workflow.py
tests/triplet/: datamodule_test.py
user/acmiyaguchi/: README.md
user/cclark/: README.md  animal-clef-data-exploration.ipynb
user/chand2020/: 20250407-00-cm-megadescriptor.ipynb  20250425-00-cm-megadescriptor-triplets.ipynb  20250425-00-cm-megadescriptor.ipynb  (+10 more)
(+8 files in other folders)
