[project]
name = "animalclef-2025"
version = "0.1.0"
authors = [{ name = "Anthony Miyaguchi", email = "acmiyaguchi@gatech.edu" }]
description = "DS@GT CLEF 2025 package for AnimalCLEF"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "imageio",
    "tqdm",
    "pyspark >= 3.4.0",
    "pyarrow",
    "torch",
    "torchvision",
    "transformers",
    "pytorch-lightning",
    "torchmetrics",
    "typer",
    "numba",
    "pacmap",
    "umap-learn",
    "faiss-cpu",
    "luigi>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pip",
    "uv",
    "jupyterlab",
    "ipykernel",
    "ruff",
    "pre-commit",
    "pytest",
    "pace-job-monitoring@git+https://github.com/dsgt-kaggle-clef/pace-job-monitoring.git#main",
]

[project.scripts]
animalclef = "animalclef.cli:app"

[project.urls]
Homepage = "https://github.com/dsgt-kaggle-clef/animalclef-2025"
Issues = "https://github.com/dsgt-kaggle-clef/animalclef-2025/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["animalclef*"]
namespaces = false
